--- a/src/app/pages/user-profile/user-profile.component.scss
+++ b/src/app/pages/user-profile/user-profile.component.scss
@@ -1,7 +1,7 @@
 .profile-picture {
   height: 200px;
   width: 200px;
-  //background-color: $semi-dark;
+  background-color: rgba(0, 0, 0, 0.2);
   text-align: center;
   padding-top: 1rem;
   > i {
