Fixed direct href usage

--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -15,7 +15,7 @@
     <div class="col-12 col-sm" *ngIf="isAdmin()">
       <h5>Admin Quick Links</h5>
       <ul class="list-unstyled text-small">
-        <li><a class="text-muted" href="/admin">Dashboard</a></li>
+        <li><a class="text-muted" routerLink="admin">Dashboard</a></li>
       </ul>
     </div>
 <!--    <div class="col-6 col-md">-->
