Added role creation, editing and deleting

--- a/src/app/_components/modal/modal.component.html
+++ b/src/app/_components/modal/modal.component.html
@@ -11,7 +11,7 @@
   {{ message }}
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-secondary" (click)="modalRef.close()">
+  <button type="button" class="btn btn-light" (click)="modalRef.close()">
    {{ closeText }}
   </button>
   <button type="button" class="btn btn-primary" (click)="modalRef.close('submitted')">{{ submitText }}</button>
