Added download link

--- a/src/app/_components/nav/nav.component.html
+++ b/src/app/_components/nav/nav.component.html
@@ -53,7 +53,7 @@
           </div>
         </ng-template>
         <li class="nav-item">
-          <a class="nav-link btn btn-primary text-dark" [routerLink]="['/']">Download</a>
+          <a class="nav-link btn btn-primary text-dark" href="https://downloads.shatteredrealmsonline.com/launcher/ShatteredRealmsOnlineLauncherSetup-0.0.3.exe">Download</a>
         </li>
       </ul>
     </div>
