--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -4,8 +4,8 @@
     <div class="card-body">
       <form [formGroup]="loginForm">
         <mdb-form-control class="form-white mb-4">
-          <input mdbInput mdbValidate [validateSuccess]="false" type="email" id="email" formControlName="email" class="form-control" />
-          <label mdbLabel class="form-label" for="email">Email</label>
+          <input mdbInput mdbValidate [validateSuccess]="false" type="text" id="username" formControlName="username" class="form-control" />
+          <label mdbLabel class="form-label" for="username">Username</label>
         </mdb-form-control>
 
         <mdb-form-control class="form-white mb-4">
