--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -17,7 +17,7 @@
                 </span>
             </p>
             <p class="card-text">
-              <a [routerLink]="['/users', user?.id, 'edit']">
+              <a [routerLink]="['/users', user?.username, 'edit']">
                 <span class="btn btn-sm btn-outline-primary">Edit Details</span>
               </a>
             </p>
