--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -9,7 +9,7 @@
       <ul class="list-unstyled text-small">
         <li><a class="text-muted" href="/">Home</a></li>
         <li><a *ngIf="!isUserSignedIn()" class="text-muted" routerLink="login">Login</a></li>
-        <li><a *ngIf="isUserSignedIn()" class="text-muted" [routerLink]="['/users', user?.id]">Profile</a></li>
+        <li><a *ngIf="isUserSignedIn()" class="text-muted" [routerLink]="['/users', user?.username]">Profile</a></li>
       </ul>
     </div>
     <div class="col-12 col-sm" *ngIf="isAdmin()">
