Integrating latest auth server

--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -9,7 +9,8 @@
       <ul class="list-unstyled text-small">
         <li><a class="text-muted" href="/">Home</a></li>
         <li><a *ngIf="!isUserSignedIn()" class="text-muted" routerLink="login">Login</a></li>
-        <li><a *ngIf="isUserSignedIn()" class="text-muted" [routerLink]="['/users', user?.username]">Profile</a></li>
+        <li><a *ngIf="isUserSignedIn()" class="text-muted" (click)="userProfile()">Profile</a>
+        </li>
       </ul>
     </div>
     <div class="col-12 col-sm" *ngIf="isAdmin()">
@@ -18,43 +19,43 @@
         <li><a class="text-muted" routerLink="admin">Dashboard</a></li>
       </ul>
     </div>
-<!--    <div class="col-6 col-md">-->
-<!--      <h5>Features</h5>-->
-<!--      <ul class="list-unstyled text-small">-->
-<!--        <li><a class="text-muted" href="#">Cool stuff</a></li>-->
-<!--        <li><a class="text-muted" href="#">Random feature</a></li>-->
-<!--        <li><a class="text-muted" href="#">Team feature</a></li>-->
-<!--        <li><a class="text-muted" href="#">Stuff for developers</a></li>-->
-<!--        <li><a class="text-muted" href="#">Another one</a></li>-->
-<!--        <li><a class="text-muted" href="#">Last time</a></li>-->
-<!--      </ul>-->
-<!--    </div>-->
-<!--    <div class="col-6 col-md">-->
-<!--      <h5>Resources</h5>-->
-<!--      <ul class="list-unstyled text-small">-->
-<!--        <li><a class="text-muted" href="#">Resource</a></li>-->
-<!--        <li><a class="text-muted" href="#">Resource name</a></li>-->
-<!--        <li><a class="text-muted" href="#">Another resource</a></li>-->
-<!--        <li><a class="text-muted" href="#">Final resource</a></li>-->
-<!--      </ul>-->
-<!--    </div>-->
-<!--    <div class="col-6 col-md">-->
-<!--      <h5>Resources</h5>-->
-<!--      <ul class="list-unstyled text-small">-->
-<!--        <li><a class="text-muted" href="#">Business</a></li>-->
-<!--        <li><a class="text-muted" href="#">Education</a></li>-->
-<!--        <li><a class="text-muted" href="#">Government</a></li>-->
-<!--        <li><a class="text-muted" href="#">Gaming</a></li>-->
-<!--      </ul>-->
-<!--    </div>-->
-<!--    <div class="col-6 col-md">-->
-<!--      <h5>About</h5>-->
-<!--      <ul class="list-unstyled text-small">-->
-<!--        <li><a class="text-muted" href="#">Team</a></li>-->
-<!--        <li><a class="text-muted" href="#">Locations</a></li>-->
-<!--        <li><a class="text-muted" href="#">Privacy</a></li>-->
-<!--        <li><a class="text-muted" href="#">Terms</a></li>-->
-<!--      </ul>-->
-<!--    </div>-->
+    <!--    <div class="col-6 col-md">-->
+    <!--      <h5>Features</h5>-->
+    <!--      <ul class="list-unstyled text-small">-->
+    <!--        <li><a class="text-muted" href="#">Cool stuff</a></li>-->
+    <!--        <li><a class="text-muted" href="#">Random feature</a></li>-->
+    <!--        <li><a class="text-muted" href="#">Team feature</a></li>-->
+    <!--        <li><a class="text-muted" href="#">Stuff for developers</a></li>-->
+    <!--        <li><a class="text-muted" href="#">Another one</a></li>-->
+    <!--        <li><a class="text-muted" href="#">Last time</a></li>-->
+    <!--      </ul>-->
+    <!--    </div>-->
+    <!--    <div class="col-6 col-md">-->
+    <!--      <h5>Resources</h5>-->
+    <!--      <ul class="list-unstyled text-small">-->
+    <!--        <li><a class="text-muted" href="#">Resource</a></li>-->
+    <!--        <li><a class="text-muted" href="#">Resource name</a></li>-->
+    <!--        <li><a class="text-muted" href="#">Another resource</a></li>-->
+    <!--        <li><a class="text-muted" href="#">Final resource</a></li>-->
+    <!--      </ul>-->
+    <!--    </div>-->
+    <!--    <div class="col-6 col-md">-->
+    <!--      <h5>Resources</h5>-->
+    <!--      <ul class="list-unstyled text-small">-->
+    <!--        <li><a class="text-muted" href="#">Business</a></li>-->
+    <!--        <li><a class="text-muted" href="#">Education</a></li>-->
+    <!--        <li><a class="text-muted" href="#">Government</a></li>-->
+    <!--        <li><a class="text-muted" href="#">Gaming</a></li>-->
+    <!--      </ul>-->
+    <!--    </div>-->
+    <!--    <div class="col-6 col-md">-->
+    <!--      <h5>About</h5>-->
+    <!--      <ul class="list-unstyled text-small">-->
+    <!--        <li><a class="text-muted" href="#">Team</a></li>-->
+    <!--        <li><a class="text-muted" href="#">Locations</a></li>-->
+    <!--        <li><a class="text-muted" href="#">Privacy</a></li>-->
+    <!--        <li><a class="text-muted" href="#">Terms</a></li>-->
+    <!--      </ul>-->
+    <!--    </div>-->
   </div>
 </footer>
